Fix alignment in upload component

--- a/src/app/onion/learning-object-builder/components/content-upload/app/upload/upload.component.scss
+++ b/src/app/onion/learning-object-builder/components/content-upload/app/upload/upload.component.scss
@@ -257,7 +257,7 @@
   }
 
   textarea {
-    width: 100%;
+    width: 97%;
     resize: vertical;
     padding: 15px;
     appearance: none;
